<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/after_signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".After_Signup_Activity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/after_signup_profile_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"

        app:civ_border_color="@color/gray"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/after_signup_username"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_page_edit_text_background"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="none|text|textPersonName"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/after_signup_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_page_edit_text_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/after_signup_username" />

    <EditText
        android:id="@+id/after_signup_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_page_edit_text_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="none|textPassword"
        android:paddingEnd="1dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/after_signup_name" />

    <EditText
        android:id="@+id/after_signup_retype_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_page_edit_text_background"
        android:ems="10"
        android:hint="@string/retype"
        android:inputType="textPassword"
        android:paddingEnd="1dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/after_signup_password" />

    <Button
        android:id="@+id/after_signup_start"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/login_page_button_background"
        android:text="@string/create_account"
        android:textColor="@color/login_page_background"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/after_signup_bio"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_page_edit_text_background"
        android:ems="10"
        android:hint="@string/bio_max_500_character"
        android:inputType="text"
        android:maxHeight="100dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/after_signup_retype_password" />

    <Button
        android:id="@+id/after_signup_change_image"
        android:layout_width="106dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_page_button_background"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/change_image"
        android:textColor="@color/login_page_background"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/after_signup_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toEndOf="@+id/after_signup_profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/aldrich"
        android:text="fill the required fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/after_signup_profile_image" />

</android.support.constraint.ConstraintLayout>