<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".Profile_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/profile_activity_app_bar_layout"
            layout="@layout/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/cardview1"
                android:layout_marginEnd="0dp"
                android:background="@color/white">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Cricket Match History" />
                    </RelativeLayout>
                </android.support.constraint.ConstraintLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardView2"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/edit_profile_info" />

                        <TextView
                            android:id="@+id/profile_editprofile_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="13dp"
                            android:background="@drawable/signup_google_background"
                            android:padding="2dp"
                            android:paddingEnd="15dp"
                            android:paddingStart="15dp"
                            android:text="@string/edit"
                            android:textColor="@color/google" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/ic_edit" />

                    </RelativeLayout>

                    <EditText
                        android:id="@+id/profile_editprofile_name"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/login_page_edit_text_background"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:textSize="14sp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

                    <EditText
                        android:id="@+id/profile_editprofile_usename"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/login_page_edit_text_background"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:textSize="14sp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_editprofile_name" />

                    <EditText
                        android:id="@+id/profile_editprofile_bio"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_page_edit_text_background"
                        android:ems="10"
                        android:hint="@string/bio_max_500_character"
                        android:inputType="textPersonName"
                        android:paddingEnd="15dp"
                        android:paddingLeft="15dp"
                        android:textSize="14sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_editprofile_usename"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/profile_editprofile_submit"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/pink_edit_text_background"
                        android:text="@string/submit"
                        android:textColor="@color/pink"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_editprofile_bio" />
                </android.support.constraint.ConstraintLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_activity_profile_icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/test_icon"
                        app:civ_border_color="@color/gray"
                        app:civ_border_width="1dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/profile_activity_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/aclonica"
                        android:text="@string/jivan_patel"
                        android:textColor="@color/cardview_dark_background"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_activity_profile_icon" />

                    <TextView
                        android:id="@+id/profile_activity_bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="12dp"
                        android:maxHeight="150dp"
                        android:paddingEnd="25dp"
                        android:paddingStart="25dp"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_activity_name"
                        app:layout_constraintVertical_bias="1.0" />
                </android.support.constraint.ConstraintLayout>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>





</android.support.constraint.ConstraintLayout>